redesigned, made a new look

--- a/index.html
+++ b/index.html
@@ -13,7 +13,53 @@
 <body>
     <div class="hero-section">
         <div class="section-wrapper">
-            <div class="flex-container">
+
+
+            <div class="nav-bar">
+                <div class="nav-links">
+                    <div class="link">
+                        <a href="#">
+                            Home
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="#">
+                            Work
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="#">
+                            About
+                        </a>
+                    </div>
+                    <div class="link">
+                        <a href="#">
+                            Contact
+                        </a>
+                    </div>
+                </div>
+                <div class="social-media">
+                    <div class="social-media-link">
+                        <a target="_blank" href="https://twitter.com/iamanas20">
+                            <img src="https://svgur.com/i/BYr.svg" />
+                        </a>
+                    </div>
+                    <div class="social-media-link">
+                        <a target="_blank" href="https://instagram.com/iamanas22">
+                            <img src="https://svgur.com/i/BY9.svg" />
+                        </a>    
+                    </div>
+                    <div class="social-media-link">
+                        <a target="_blank" href="https://github.com/iamanas20">
+                            <img src="https://svgur.com/i/BXq.svg" />
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+
+
+            <!-- <div class="flex-container">
                 <div class="brand-id">
                     <a href="#">
                         <img src="assets/LogoReadyForC4D small.png" />
@@ -27,8 +73,14 @@
                         22 years old, Moroccan front end developer, UI/UX designer, illustrator and one cool dude!
                     </div>
                 </div>
-            </div>
+                <div class="scroll-down-indicator">
+                    <img src="https://svgur.com/i/BW2.svg"/>
+                </div>
+            </div> -->
         </div>
+    </div>
+    <div class="navigation-section">
+
     </div>
 </body>
 </html>
