--- a/index.html
+++ b/index.html
@@ -6,36 +6,44 @@
     <title>Anas Latique</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
-    <script src="js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800" rel="stylesheet">
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
-<body>
+<body onload="onLoad()" >
     <div class="hero-section">
         <div class="section-wrapper">
-
 
             <div class="nav-bar">
                 <div class="nav-links">
                     <div class="link">
-                        <a href="#">
+                        <a class="real-link num-1 active-nav-link" href="#">
+                            <div class="hover-effect"></div>
                             Home
                         </a>
+                        <div class="active-border"></div>
                     </div>
                     <div class="link">
-                        <a href="#">
+                        <a class="real-link num-2" href="#">
+                            <div class="hover-effect"></div>
                             Work
                         </a>
+                        <div class="active-border"></div>
                     </div>
                     <div class="link">
-                        <a href="#">
+                        <a class="real-link num-3" href="#">
+                            <div class="hover-effect"></div>
                             About
                         </a>
+                        <div class="active-border"></div>
                     </div>
                     <div class="link">
-                        <a href="#">
+                        <a class="real-link num-4" href="#">
+                            <div class="hover-effect"></div>
                             Contact
                         </a>
+                        <div class="active-border"></div>
                     </div>
                 </div>
                 <div class="social-media">
@@ -56,31 +64,24 @@
                     </div>
                 </div>
             </div>
-
-
-
-            <!-- <div class="flex-container">
-                <div class="brand-id">
-                    <a href="#">
-                        <img src="assets/LogoReadyForC4D small.png" />
-                    </a>
-                </div>
-                <div class="hero-content-container">
-                    <div class="brand-id-text">
-                        ANAS LATIQUE
-                    </div>
-                    <div class="brand-id-content">
-                        22 years old, Moroccan front end developer, UI/UX designer, illustrator and one cool dude!
-                    </div>
-                </div>
-                <div class="scroll-down-indicator">
-                    <img src="https://svgur.com/i/BW2.svg"/>
-                </div>
-            </div> -->
         </div>
     </div>
-    <div class="navigation-section">
+    <div class="content-section">
+        <div class="section show-section">
+            <div class="section-wrapper">
+                
+            </div>
+        </div>
+        <div class="section">
 
+        </div>
+        <div class="section">
+
+        </div>
+        <div class="section">
+
+        </div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 </html>
