added foundation for first hero section

--- a/index.html
+++ b/index.html
@@ -67,9 +67,16 @@
         </div>
     </div>
     <div class="content-section">
-        <div class="section show-section">
+        <div class="section home-section show-section">
             <div class="section-wrapper">
-                
+                <div class="hero-stripe-container">
+                    <div class="logo-container">
+
+                    </div>
+                    <div class="easter-egg-container">
+
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section">
