--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
         <div class="section home-section show-section">
             <div class="section-wrapper">
                 <div class="hero-stripe-container">
-                    <div class="logo-container">
-
-                    </div>
-                    <div class="easter-egg-container">
-
+                    <div class="logo-container"></div>
+                    <div class="easter-egg-container"></div>
+                    <div class="hero-text">
+                        Your Dope As Hell Developer
                     </div>
                 </div>
             </div>
