moved on the design

--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700" rel="stylesheet">
     <script src="jquery-3.3.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body onload="onLoad()" >
     <div class="hero-section">
         <div class="section-wrapper">
-
             <div class="nav-bar">
                 <div class="nav-links">
                     <div class="link">
@@ -70,10 +71,22 @@
         <div class="section home-section show-section">
             <div class="section-wrapper">
                 <div class="hero-stripe-container">
-                    <div class="logo-container"></div>
-                    <div class="easter-egg-container"></div>
+                    <div class="logo-container">
+                        <img src="./assets/LogoReadyForC4D small.png" />
+                    </div>
+                    <div class="easter-egg-container">
+                        <img src="./assets/menudah.png" />
+                    </div>
                     <div class="hero-text">
-                        Your Dope As Hell Developer
+                        <div>
+                            Hi, I'm Anas.
+                        </div>
+                        <div>
+                            Designer, Developer
+                        </div>
+                        <div>
+                            And One Cool Dude!
+                        </div>
                     </div>
                 </div>
             </div>
