--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
                         </div>
                     </div>
                 </div>
+                <div class="overview-section">
+                    <div class="image-container">
+                        <img src="https://svgur.com/i/BgC.svg"/>
+                    </div>
+                    <div class="text-container">
+                        <div class="title">
+                            Overview
+                        </div>
+                        <div class="text">
+                            Since the beginning of my journey as a student developer 
+                            more than 2 years ago, I've been stunned seeing the fast pace 
+                            improvement of the industry, so my take to keep up is I started creating small apps 
+                            and experiences to improve my design and development skills. 
+                            I really love learning new things, meeting and talking to new 
+                            people, I'm perpetually working on improving my chops one 
+                            design/development problem at a time, and I'm one dope as hell 
+                            funny dude!
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="section">
