added many sections

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
     <div class="content-section">
         <div class="section home-section show-section">
-            <div class="section-wrapper">
+            <div class="hero-section-container">
                 <div class="hero-stripe-container">
                     <div class="logo-container">
                         <img src="./assets/LogoReadyForC4D small.png" />
@@ -89,24 +89,53 @@
                         </div>
                     </div>
                 </div>
+            </div>
                 <div class="overview-section">
-                    <div class="image-container">
-                        <img src="https://svgur.com/i/BgC.svg"/>
+                    <div class="section-wrapper">
+                        <div class="image-container">
+                            <img src="https://svgur.com/i/BgC.svg"/>
+                        </div>
+                        <div class="text-container">
+                            <div class="title">
+                                Overview
+                            </div>
+                            <div class="text">
+                                Since the beginning of my journey as a student developer 
+                                more than 2 years ago, I've been stunned seeing the fast pace 
+                                improvement of the industry, so my take to keep up is I started creating small apps 
+                                and experiences to improve my design and development skills. 
+                                I really love learning new things, meeting and talking to new 
+                                people, I'm perpetually working on improving my chops one 
+                                design/development problem at a time, and I'm one dope as hell 
+                                funny dude!
+                            </div>
+                        </div>
                     </div>
-                    <div class="text-container">
-                        <div class="title">
-                            Overview
+                </div>
+            </div>
+            <div class="profile-section">
+                <div class="profile-stripe-container">
+                    <div class="section-wrapper">
+                        <div class="text-container">
+                            <div class="title">
+                                Profile
+                            </div>
+                            <div class="text">
+                                I have more than 20 github repositories, and I 
+                                tackled many technologies and environments over 
+                                the past two years as a developer, right now I'm 
+                                hired as a front end developer at serious venture, 
+                                this is some the stuff I know and work with.
+                            </div>
                         </div>
-                        <div class="text">
-                            Since the beginning of my journey as a student developer 
-                            more than 2 years ago, I've been stunned seeing the fast pace 
-                            improvement of the industry, so my take to keep up is I started creating small apps 
-                            and experiences to improve my design and development skills. 
-                            I really love learning new things, meeting and talking to new 
-                            people, I'm perpetually working on improving my chops one 
-                            design/development problem at a time, and I'm one dope as hell 
-                            funny dude!
-                        </div>
+                    </div>
+                </div>
+                <div class="profile-cards-container">
+                    <div class="card">
+                        <img src="https://svgur.com/i/BgV.svg"/>
+                    </div>
+                    <div class="card">
+                        <img src="https://svgur.com/i/Bg1.svg"/>
                     </div>
                 </div>
             </div>
