responsiveness is up

--- a/index.html
+++ b/index.html
@@ -14,31 +14,28 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
 </head>
-<body>
+<body class="body">
     <div class="hero-section">
-        <div class="section-wrapper">
-            <div class="nav-bar">
-                <div class="brand-id-container">
-                    <img src="./assets/LogoReadyForC4D small.png" />
+        <div class="nav-bar">
+            <div class="brand-id-container">
+                <img src="./assets/LogoReadyForC4Dblack.png" />
+            </div>
+            <div class="link-and-menu">
+                <div class="link">
+                    <a class="real-link num-1" href="#">
+                        Let's Talk
+                    </a>
+                    <div class="active-border"></div>
                 </div>
-                <div class="link-and-menu">
-                    <div class="link">
-                        <a class="real-link num-1 active-nav-link" href="#">
-                            <div class="hover-effect"></div>
-                            Let's Talk
-                        </a>
-                        <div class="active-border"></div>
-                    </div>
-                    <div class="menu-big-container" id="menu-container">
-                        <div class="circle-container">
-                            <div class="menu-container circle">
-                                <div class="menu">
-                                    <div class="menu-line"></div>
-                                    <div class="menu-line-small-container">
-                                        <div class="menu-line-small"></div>
-                                    </div>
-                                    <div class="menu-line"></div>
+                <div class="menu-big-container" id="menu-container">
+                    <div class="circle-container">
+                        <div class="menu-container circle">
+                            <div class="menu">
+                                <div class="menu-line"></div>
+                                <div class="menu-line-small-container">
+                                    <div class="menu-line-small"></div>
                                 </div>
+                                <div class="menu-line"></div>
                             </div>
                         </div>
                     </div>
@@ -47,14 +44,15 @@
         </div>
         <div class="section home-section show-section">
             <div class="hero-stripe-container">
-                <div class="section-wrapper">
-                    <div>
-                        
+                <div class="hero-image-container">
+                    <img src="https://svgur.com/i/BzN.svg"/>
+                </div>
+                <div class="hero-text-container">
+                    <div class="hero-title">
+                        Developer, Designer and One Cool Dude
                     </div>
-                    <div class="hero-text-container">
-                        <div class="hero-title">
-                            Hi, I'm Anas Latique
-                        </div>
+                    <div class="hero-text">
+                        I design and code beautifully simple things, and I enjoy what I do.
                     </div>
                 </div>
             </div>
@@ -170,14 +168,13 @@
         <div class="section-wrapper">
             <div class="text-container">
                 <div class="title">
-                    My Recent Work
+                    My Recent Dev Work
                 </div>
                 <div class="text">
                     Some of my recent work, you wanna collab on some? <a href="mailto:anaslatique@gmail.com?Subject=I%20wanna%20see%20some%20of%20your%20work" target="_top">Email me!</a>
                 </div>
             </div>
             <div class="work-collection-container">
-                <div class="work-collection-row">
                     <div class="work">
                         <div class="w-1">
                             <div class="work-big-title">
@@ -232,8 +229,6 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="work-collection-row">
                     <div class="work">
                         <div class="w-4">
                             <div class="work-big-title">
@@ -288,18 +283,37 @@
                             </div>
                         </div>
                     </div>
-                </div>
             </div>
             <div class="see-all-button-container">
                 <a href="https://github.com/iamanas20" class="see-all-button">
-                    <!-- <img src="https://svgur.com/i/BrM.svg"/> -->
                     <span>
                         See All On GitHub
                     </span>
+                    <img class="regular-img" src="https://svgur.com/i/BzY.svg"/>
+                    <img class="white-img" src="https://svgur.com/i/BzZ.svg"/>
                 </a>
             </div>
         </div>
     </div>
+
+    <!-- <div class="invest-section">
+        <div class="section-wrapper">
+            <div class="text-container">
+                <div class="title">
+                    My Recent Design Work
+                </div>
+                <div class="text">
+                    Some of my recent work, you wanna collab on some? <a href="mailto:anaslatique@gmail.com?Subject=I%20wanna%20see%20some%20of%20your%20work" target="_top">Email me!</a>
+                </div>
+            </div>
+        </div>
+    </div> -->
+    <!-- <div class="mouse-follower">
+        <div class="circle">
+            <div class="dot">
+            </div>
+        </div>
+    </div> -->
     <script src="js/main.js"></script>
 </body>
 </html>
