added some sections

--- a/index.html
+++ b/index.html
@@ -296,18 +296,40 @@
         </div>
     </div>
 
-    <!-- <div class="invest-section">
+    <div class="recent-design-section">
         <div class="section-wrapper">
             <div class="text-container">
                 <div class="title">
                     My Recent Design Work
                 </div>
                 <div class="text">
-                    Some of my recent work, you wanna collab on some? <a href="mailto:anaslatique@gmail.com?Subject=I%20wanna%20see%20some%20of%20your%20work" target="_top">Email me!</a>
+                    Coming Very Soon... Want special access? <a href="mailto:anaslatique@gmail.com?Subject=I%20wanna%20see%20some%20of%20your%20work" target="_top">Email me!</a>
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
+
+    <div class="the-thing-section">
+        <div class="section-wrapper">
+            <div class="card-container">
+                <div class="card">
+                    <div class="small-title">
+                        My Thing
+                    </div>
+                    <div class="titles-stripe">
+                    </div>
+                    <div class="title">
+                        No Challenges Too Hard 
+                        <br />
+                        No Goals Too Far
+                    </div>
+                    <div class="text">
+                        I have created some apps that made me learn so many dope as hell concepts, from calling APIs, manipulating and using a JSON response, to creating cutting edge dope as hell ;) platforms, it's never impossible, always learning and improving. Big and world class performance meets serious detail-sweating at each and every point of the app.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- <div class="mouse-follower">
         <div class="circle">
             <div class="dot">
