--- a/index.html
+++ b/index.html
@@ -46,20 +46,50 @@
             </div>
             <div class="menu-list">
                 <div>
+                    <div class="personal-brand-id-menu">
+                        <a href="./index.html">
+                            <img src="assets/LogoReadyForC4D small.png"></img>
+                        </a>
+                    </div>
                     <div class="close-menu"><img src="https://svgur.com/i/C7F.svg"></img></div>
+                    <div class="social-media-menu-container">
+                        <div class="github">
+                            <a href="https://www.github.com/iamanas20" target="_blank">
+                                <img src="https://svgur.com/i/C7v.svg"></img>
+                            </a>
+                        </div>
+                        <div class="insta">
+                            <a href="https://www.instagram.com/iamanas22" target="_blank">
+                                <img src="https://svgur.com/i/C5z.svg"></img>
+                            </a>
+                        </div>
+                        <div class="facebook">
+                            <a href="https://www.facebook.com/iamanas22" target="_blank">
+                                <img src="https://svgur.com/i/C84.svg"></img>
+                            </a>
+                        </div>
+                        <div class="twitter">
+                            <a href="https://www.facebook.com/iamanas20" target="_blank">
+                                <img src="https://svgur.com/i/C7P.svg"></img>
+                            </a>
+                        </div>
+                    </div>
                     <ul>
                         <li>
                             <a href="./index.html">Home</a>
                             <div class="menu-hover-indicator"></div>
                         </li>
                         <li>
-                            <a href="http://">Work</a>
+                            <a href="#">Work</a>
+                            <div class="menu-hover-indicator"></div>
                         </li>
                         <li>
-                            <a href="http://">About</a>
+                            <a href="#">About</a>
+                            <div class="menu-hover-indicator"></div>
                         </li>
                         <li>
-                            <a href="http://">Contact</a>
+                            <a href="#">Contact</a>
+                            <div class="menu-hover-indicator"></div>
                         </li>
                     </ul>
                 </div>
