--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="profile-cards-container">
                 <div class="card-container">
                     <div class="card">
-                        <img class="top-icon" src="https://svgur.com/i/BgV.svg"/>
+                        <img class="top-icon" src="https://svgur.com/i/C8b.svg"/>
                         <div class="card-header">
                             Designer
                         </div>
@@ -186,7 +186,7 @@
                 </div>
                 <div class="card-container">
                     <div class="card">
-                        <img class="top-icon" src="https://svgur.com/i/Bg1.svg"/>
+                        <img class="top-icon" src="https://svgur.com/i/C7R.svg"/>
                         <div class="card-header">
                             Developer
                         </div>
@@ -342,8 +342,10 @@
                     <span>
                         See All On GitHub
                     </span>
-                    <img class="regular-img" src="https://svgur.com/i/BzY.svg"/>
-                    <img class="white-img" src="https://svgur.com/i/BzZ.svg"/>
+                    <div>
+                        <img class="regular-img" src="https://svgur.com/i/C8c.svg"/>
+                        <img class="white-img" src="https://svgur.com/i/BzZ.svg"/>
+                    </div>
                 </a>
             </div>
         </div>
