added and finished the meet the person section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/js/swiper.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.5/css/swiper.min.css" rel="stylesheet" />
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
 </head>
 <body class="body">
     <div class="hero-section">
@@ -391,7 +395,7 @@
         <div class="section-wrapper">
             <div class="text-container">
                 <div class="title">Meet The Person</div>
-                <div class="text">You Might know a lot from the work and all, but you also want to know my personality and what I stand for.</div>
+                <div class="text">You might know a lot from the work and all, but you also want to know my personality and what I stand for.</div>
             </div>
             <div class="slider-container">
                 <div class="blog-slider">
@@ -402,10 +406,15 @@
                                 <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759872/kuldar-kalvik-799168-unsplash.jpg" alt="">
                             </div>
                             <div class="blog-slider__content">
-                                <span class="blog-slider__code">26 December 2019</span>
-                            <div class="blog-slider__title">Lorem Ipsum Dolor</div>
-                            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi? </div>
-                            <a href="#" class="blog-slider__button">READ MORE</a>
+                                <span class="blog-slider__code">No other key</span>
+                                <div class="blog-slider__stripe"></div>
+                                <div class="blog-slider__title">Just Be Cool</div>
+                                <div class="blog-slider__text">
+                                I always stick to a principle which is to be as much positive as I can going through whatever you'll find me the guy that will smile facing it, whether it's at work or personal life, this is what helped me through bad and good times!
+                            </div>
+                            <div class="blog-slider___button-container">  
+                                <a href="#" class="blog-slider__button">Read More</a>
+                            </div>
                         </div>
                     </div>
                     <div class="blog-slider__item swiper-slide">
@@ -413,10 +422,15 @@
                             <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759871/jason-leung-798979-unsplash.jpg" alt="">
                         </div>
                         <div class="blog-slider__content">
-                            <span class="blog-slider__code">26 December 2019</span>
-                            <div class="blog-slider__title">Lorem Ipsum Dolor2</div>
-                            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
-                            <a href="#" class="blog-slider__button">READ MORE</a>
+                            <span class="blog-slider__code">My design approach</span>
+                            <div class="blog-slider__stripe"></div>
+                            <div class="blog-slider__title">More With Less</div>
+                            <div class="blog-slider__text">
+                                Always going into a new design, whether sketching in Photoshop or Illustrator or straight up in code, I always try to find the simpler, the whiter, the doper way in presenting it, I believe that minimal design helps users find their way easily!
+                            </div>
+                            <div class="blog-slider___button-container">  
+                                <a href="#" class="blog-slider__button">Read More</a>
+                            </div>
                         </div>
                     </div>
                     
@@ -425,10 +439,15 @@
                             <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1535759871/alessandro-capuzzi-799180-unsplash.jpg" alt="">
                         </div>
                         <div class="blog-slider__content">
-                            <span class="blog-slider__code">26 December 2019</span>
-                            <div class="blog-slider__title">Lorem Ipsum Dolor</div>
-                            <div class="blog-slider__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae voluptate repellendus magni illo ea animi?</div>
-                            <a href="#" class="blog-slider__button">READ MORE</a>
+                            <span class="blog-slider__code">How I go with coding</span>
+                            <div class="blog-slider__stripe"></div>
+                            <div class="blog-slider__title">Always Learn</div>
+                            <div class="blog-slider__text">
+                                For me, the thing about writing code is all about embracing the obstacles and challenges that I face, and write readable clean code, I love to collaborate with my people and work as a team to accomplish the best stuff!
+                            </div>
+                            <div class="blog-slider___button-container">  
+                                <a href="#" class="blog-slider__button">Read More</a>
+                            </div>
                         </div>
                     </div>
                         
