--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 </head>
 <body class="body">
 
-    <!-- <div class="loader-section">
+    <div class="loader-section">
         <div class="loader-container">
             <img src="assets/LogoReadyForC4Dblack.png"/>
             <div class="progress-bar-container">
                 <div class="progress-bar"></div>
             </div>
         </div>
-    </div> -->
+    </div>
 
     <div class="loaded">
         <div class="hero-section">
