--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
                     <div class="social-media-menu-container">
                         <div class="github">
                             <a href="https://www.github.com/iamanas20" target="_blank">
-                                <img src="https://svgur.com/i/C7v.svg"></img>
+                                <img src="https://svgur.com/i/CN5.svg"></img>
                             </a>
                         </div>
                         <div class="insta">
                             <a href="https://www.instagram.com/iamanas22" target="_blank">
-                                <img src="https://svgur.com/i/C5z.svg"></img>
+                                <img src="https://svgur.com/i/CML.svg"></img>
                             </a>
                         </div>
                         <div class="facebook">
                             <a href="https://www.facebook.com/iamanas22" target="_blank">
-                                <img src="https://svgur.com/i/C84.svg"></img>
+                                <img src="https://svgur.com/i/CN4.svg"></img>
                             </a>
                         </div>
                         <div class="twitter">
-                            <a href="https://www.facebook.com/iamanas20" target="_blank">
-                                <img src="https://svgur.com/i/C7P.svg"></img>
+                            <a href="https://www.twitter.com/iamanas20" target="_blank">
+                                <img src="https://svgur.com/i/CMX.svg"></img>
                             </a>
                         </div>
                     </div>
@@ -485,13 +485,38 @@
 </div>
 
 <div class="footer-section">
+    <div class="copyright">
+        Anas Latique, Copyight &copy; All Rights Reserved
+    </div>
     <div class="section-wrapper">
         <div class="container">
             <div class="logo">
                 <img src="assets/LogoReadyForC4D small.png" />
             </div>
-            <div class="social-media">
-                
+            <div class="moto-text">
+                Anas Latique's Personal Brand Identity
+            </div>
+            <div class="social-media-container">
+                    <div class="github">
+                        <a href="https://www.github.com/iamanas20" target="_blank">
+                            <img src="https://svgur.com/i/CN5.svg"></img>
+                        </a>
+                    </div>
+                    <div class="insta">
+                        <a href="https://www.instagram.com/iamanas22" target="_blank">
+                            <img src="https://svgur.com/i/CML.svg"></img>
+                        </a>
+                    </div>
+                    <div class="facebook">
+                        <a href="https://www.facebook.com/iamanas22" target="_blank">
+                            <img src="https://svgur.com/i/CN4.svg"></img>
+                        </a>
+                    </div>
+                    <div class="twitter">
+                        <a href="https://www.twitter.com/iamanas20" target="_blank">
+                            <img src="https://svgur.com/i/CMX.svg"></img>
+                        </a>
+                    </div>
             </div>
         </div>
     </div>
