new tab in all on github

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     </div>
                 </div>
             <div class="see-all-button-container">
-                <a href="https://github.com/iamanas20" class="see-all-button">
+                <a target="_blank" href="https://github.com/iamanas20" class="see-all-button">
                     <span>
                         See All On GitHub
                     </span>
